# desktop-files-creator

./: README.md  com.github.alexkdeveloper.desktop-files-creator.json  meson.build
data/: com.github.alexkdeveloper.desktop-files-creator.appdata.xml.in  com.github.alexkdeveloper.desktop-files-creator.desktop.in  com.github.alexkdeveloper.desktop-files-creator.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  cs.po  de.po  desktop-file-creator.pot  es.po  it.po  meson.build  nl.po  ru.po  sk.po  sv.po  tr.po
src/: config.vapi  desktop_files_creator.gresource.xml  main.vala  meson.build  window.ui  window.vala
